# permi

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  apply_patch.py  chop.py  pyproject.toml  requirements.txt  results.md  results.txt  test_db.py  test_engine.py  test_llm.py  test_scan.py  test_vuln.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
ai_filter/: filter.py  llm_client.py
cli/: exporter.py  feedback.py  formatter.py  main.py
db/: config.py  database.py  queries.py
docs/: index.html
scanner/: engine.py  rules.py  scan.py  web_scanner.py
test_project/app/: auth.py  ussd.py  views.py
