[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "permi"
version = "0.2.6"
description = "AI-powered vulnerability scanner for Nigerian developers and global SMBs"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Nasarah Peter Dashe", email = "dashenasarahpeter@gmail.com" }
]
keywords = [
    "security",
    "vulnerability-scanner",
    "static-analysis",
    "SAST",
    "AI",
    "nigeria",
    "cybersecurity",
    "developer-tools",
    "CLI",
    "SQL-injection",
    "XSS",
    "secrets-detection",
    "USSD"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "python-dotenv",
    "colorama",
    "click",
    "requests",
    "httpx",
    "beautifulsoup4",
]

[project.urls]
Homepage = "https://github.com/Peternasarah/permi"
Repository = "https://github.com/Peternasarah/permi"
"Bug Tracker" = "https://github.com/Peternasarah/permi/issues"
Changelog = "https://github.com/Peternasarah/permi/releases"

[project.scripts]
permi = "cli.main:cli"

[tool.setuptools.packages.find]
include = ["scanner*", "ai_filter*", "cli*", "db*"]